# pipes-saltevent

./: .gitignore  pipes-event.sublime-project  pipes-saltevent.cabal  saltevent.hs  setup-notes.md
src/: SaltEvent.hs  main.hs
