Name: pipes-saltevent
Version: 1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
Copyright: 2014 Pierre Radermecker
Author: Pierre Radermecker
Maintainer: PierreR@pi3r.com
Bug-Reports: https://github.com/PierreR/pipes-saltevent
Tested-With: GHC == 7.6.3
Synopsis: Pipes event from an http flow
Description:
Category: Pipes
Source-Repository head
    Type: git
    Location: https://github.com/PierreR/pipes-saltevent

Library
    default-language: Haskell2010
    Build-Depends:
        base             >= 4.3     && < 5,
        binary,
        bytestring       >= 0.10    && < 0.11,
        pipes            >= 4.1     && < 4.2,
        postgresql-simple  >= 0.4
    GHC-Options: -O2 -fno-warn-missing-signatures

executable saltevent
  default-language: Haskell2010
  main-is:  saltevent.hs
  build-depends:  async >= 2,
                  base >= 4,
                  bytestring,
                  connection        >= 0.1 && < 0.2,
                  pipes             >= 4.1 && < 4.2,
                  pipes-attoparsec  >= 0.4 && < 0.5,
                  pipes-bytestring  >= 2.0 && < 2.1,
                  pipes-http        >= 1.0 && < 1.1,
                  postgresql-simple >= 0.4
  ghc-options:     -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
