Name: pipes-saltevent
Version: 1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
Copyright: 2014 Pierre Radermecker
Author: Pierre Radermecker
Maintainer: PierreR@pi3r.com
Bug-Reports: https://github.com/PierreR/pipes-saltevent
Tested-With: GHC == 7.6.3
Synopsis: Pipes event from an http flow of salt events (from Bottle)
Description:
Category: Pipes
Source-Repository head
    Type: git
    Location: https://github.com/PierreR/pipes-saltevent

executable saltevent
  default-language: Haskell2010
  hs-source-dirs: src
  main-is:  main.hs
  build-depends:  aeson             >= 0.7  && < 0.8,
                  async             >= 2    && < 3,
                  base              >= 4    && < 5,
                  bytestring        >= 0.10 && < 0.11,
                  lens              >= 4.1  && < 4.2,
                  old-locale        >= 1.0  && < 2.0,
                  pipes             >= 4.1  && < 4.2,
                  pipes-aeson       >= 0.3  && < 0.5,
                  pipes-http        >= 1.0  && < 1.1,
                  pipes-group       >= 1.0  && < 1.1,
                  pipes-parse       >= 3.0  && < 3.1,
                  pipes-bytestring  >= 2.0  && < 2.1,
                  postgresql-simple >= 0.4  && < 0.5,
                  text              >= 1.0  && < 1.2,
                  time              >= 1.4  && < 1.5
  ghc-options:     -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
